--- a/CSS/box model.css
+++ b/CSS/box model.css
@@ -76,8 +76,7 @@ body{
     height: 200px;
     margin-top: 50px;
     margin-left: 100px;
-    padding-top: 50px;
-    padding-bottom: 100px;
+    padding: 50px;
     border: 40px solid green;
     border-bottom-right-radius: 200px;
     border-top-left-radius: 50px;
@@ -89,8 +88,9 @@ body{
     margin-left: 50px;
     border-radius: 100px;
     padding-top: 70px;
-    border-top-left-radius: 200px;
-    border-bottom-left-radius: 200px;
+    border-top-left-radius: 300px;
+    border-bottom-left-radius: 300px;
+    background-color: darkslategrey;
 
 }
 #seven{
