--- a/CSS/pseudo.css
+++ b/CSS/pseudo.css
@@ -31,6 +31,7 @@ div::first-letter{
 #second::first-letter{
     color: maroon;
     background-color: black;
+    font-size: 50PX;
 }
 div::before{
     color: white;
