--- a/CSS/relationship selector.css
+++ b/CSS/relationship selector.css
@@ -7,6 +7,7 @@ div>p{
     color:white;
     background-color: black;
     font-size: larger;
+    border: 5PX solid green;
 }
 p~p{
     color: red;
