--- a/CSS/round.css
+++ b/CSS/round.css
@@ -6,12 +6,12 @@ img{
     position: absolute;
 }
 .img1{
-    left: 250px;
+    left: 270px;
     top: 10px;
 }
 .img2{
     left: 200px;
-    top: 80px;
+    top: 90px;
 }
 .img3{
     left: 150px;
@@ -23,21 +23,48 @@ img{
 }
 .img6{
     left: 160px;
-    top: 320px;
-}
-.img7{
-    left: 190px;
-    top: 400px;
+    top: 350px;
 }
 .img8{
     left: 270px;
-    top: 470px;
+    top: 440px
 }
 .img9{
-    left: 350px;
-    top: 500px;
+    left: 360px;
+    top: 450px;
 }
 .img10{
-    left:390px;
+    left:4000px;
     top: 520px;
+}
+.img11{
+    left: 360px;
+}
+.img12{
+    left: 430px;
+    top: 50px;
+}
+.img13{
+    left: 500px;
+    top: 120px;
+}
+.img14{
+    left: 550px;
+    top: 200px;
+}
+.img15{
+    left: 550px;
+    top: 300px;
+}
+.img16{
+    left: 530px;
+    top: 400px;
+}
+.img17{
+    left: 450px;
+    top: 450px;
+}
+.img7{
+    left: 200px;
+    top: 400px;
 }
